--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div
         class="container mx-auto flex justify-between items-center py-4 px-6"
       >
-        <h1 class="text-2xl font-bold">My Name</h1>
+        <h1 class="text-lg lg:text-2xl font-bold">My Name</h1>
         <nav>
           <ul class="flex space-x-6">
             <li>
