--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
       >
         <h1 class="text-lg lg:text-2xl font-bold">My Name</h1>
         <nav>
-          <ul class="flex space-x-6">
+          <ul class="flex space-x-4 md:space-x-6">
             <li>
-              <a href="#about" class="hover:text-blue-400 transition">About</a>
+              <a href="#about" class="text-xs md:text-lg hover:text-blue-400 transition">About</a>
             </li>
             <li>
-              <a href="#skills" class="hover:text-blue-400 transition"
+              <a href="#skills" class="text-xs md:text-lg hover:text-blue-400 transition"
                 >Skills</a
               >
             </li>
             <li>
-              <a href="#projects" class="hover:text-blue-400 transition"
+              <a href="#projects" class="text-xs md:text-lg hover:text-blue-400 transition"
                 >Projects</a
               >
             </li>
             <li>
-              <a href="#contact" class="hover:text-blue-400 transition"
+              <a href="#contact" class="text-xs md:text-lg hover:text-blue-400 transition"
                 >Contact</a
               >
             </li>
